redid formation of li's in compare box, so I could use grid to ensure consistant spacing between names and arrowns in each line via grid

--- a/frontend/compare_languages/compare_page.css
+++ b/frontend/compare_languages/compare_page.css
@@ -93,9 +93,15 @@ ul.a:active{
 }
 
 li{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     padding-bottom: 10px;
     padding-top: 10px;
 } 
+
+.arrow{
+    justify-self: center;
+}
 
 #compareBox{
     display: flex; 
